# tangent

./: .envrc  .gitignore  Cargo.toml  README.md  bun.lockb  flake.nix  jsconfig.json  meson.build  package.json  rollup.config.js  uBlacklist.txt
data/: meson.build  surf.tangent.Tangent.desktop  surf.tangent.Tangent.gschema.xml  surf.tangent.Tangent.service
data/appdata/: meson.build  surf.tangent.Tangent.metainfo.xml
docs/: index.html
libarc/: README.md  bun.lockb  package.json
libarc/src/: index.test.ts  index.ts
share/metainfo/: surf.tangent.Tangent.metainfo.xml
src/: App.svelte  bin.js  import_map.json  main.js  main.rs  meson.build  settings.js  style.css  types.d.ts  window.blp
src/svelte-gjs/: AdwWindow.svelte  GtkGenericWidget.svelte  index.js
