[package]
name = "tangent"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/mollersuite/tangent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webkit6 = "0.1.0"
relm4 = {version = "0.6.0", features = ["libadwaita"]}
relm4-components = "0.6.0"
adw = { package = "libadwaita", version = "0.4", features = ["v1_3", "gtk_v4_10"] }
